Fixed h1 font-size and spacing issue

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ button:active {
 
 i.fa-solid {
     position: absolute;
-    top: 1rem;
+    top: 2.5rem;
     right: 15rem;
     font-size: 1.5rem;
     line-height: 1.4;
@@ -67,6 +67,10 @@ i.fa-solid {
 }
 
 /*Headings*/
+h1{
+    font-size: 3rem;
+}
+
 h3 {
     font-size: 1.5rem;
     margin-bottom: 5px;
